--- a/style.css
+++ b/style.css
@@ -1,3 +1,51 @@
 body {
-    background-color: blueviolet;
+    background-color: #efefef;
+   
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+li {
+    display: inline;
+    
+
+}
+img {
+    position: fixed;
+    top: 30%;
+    left: 45%;
+    transform: scale(2.0);
+}
+input {
+    position: fixed;
+    top: 50%;
+    left: 35.5%;
+    width: 600px;
+    height: 50px;
+    border: grey solid 2px;
+    border-radius: 45px;
+}
+a {
+    
+    padding: 20px;
+}
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: 999999;
+    width: 100%;
+    padding: 15px;
+    background-color: #efefef;
+}
+
+
+
+.right-header {
+   float: right; 
+}
+.right-footer {
+    float: right;
 }
